--- a/projects.html
+++ b/projects.html
@@ -205,13 +205,12 @@
       border-radius: 15%;
       overflow: hidden;
       cursor: url(pointer.png), auto;
-      transition: transform 0.3s ease, border 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .projects:hover {
       transform: scale(1.05); /* Slightly expand the project div */
-      border: 4px solid #FF8C00; /* Add orange border */
-      box-shadow: 0 8px 20px rgba(255, 140, 0, 0.5); /* Add orange shadow */
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); /* Add orange shadow */
       cursor: url(pointer.png), auto;
     }
 
