--- a/servises.html
+++ b/servises.html
@@ -44,11 +44,6 @@
       .loading-screen img {
         width: 130px; /* Adjust size of preloader image */
       }
-      @media (max-width: 1050px) {
-        .loading-screen img{
-            width: 80px;
-          }
-      }
       .loading-screen {
           transition: opacity 0.5s ease-out;
       }
@@ -65,6 +60,14 @@
       }
       .skip p {
         font: 0.8em sans-serif;
+      }
+      @media (max-width: 1050px) {
+        .loading-screen img{
+            width: 180px;
+          }
+          .skip {
+            bottom: 100px;
+          }
       }
 
     .logo {
