--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         cursor: url("pointer.png"), auto;
       }
 
+      a {
+        cursor: url(pointer.png), auto;
+        text-decoration: none;
+      }
+
       header {
         width: 100%;
         background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
@@ -805,8 +810,41 @@
           </div>
       </section>
 
-      <!-- Section 4 -->
       <section class="hover-content" id="content5">
+        <div class="text-content">
+          <a href="projects.html"><h1>OUR<br> 
+            <span class="highlightone">PROJECTS</span></h1></a>
+            <p></p>
+        </div>
+        <div class="image-content">
+            <a href="projects.html"><img src="bg6.png" alt="Summit TECS Engineering Image"  style="height: 380px; width: 800px;"></a>
+        </div>
+    </section>
+
+    <section class="hover-content" id="content6">
+        <div class="text-content">
+            <a href="partners.html"><h1>OUR<br> 
+            <span class="highlightone">CLIENTS</span></h1></a>
+            <p></p>
+        </div>
+        <div class="image-content">
+            <a href="partners.html"><img src="partners.png" alt="Summit TECS Engineering Image" style="height: 380px; width: 800px;"></a>
+        </div>
+    </section>
+
+    <section class="hover-content" id="content7">
+        <div class="text-content">
+            <a href="servises.html"><h1>OUR<br> 
+            <span class="highlightone">SERVICES</span></h1></a>
+            <p></p>
+        </div>
+        <div class="image-content">
+            <a href="servises.html"><img src="images/compressed-air.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 800px;"></a>
+        </div>
+    </section>
+
+      <!-- Section 4 -->
+      <section class="hover-content" id="content8">
         <div class="text-content">
             <h1>SUMMIT<br>
                 <span class="highlightone">CORE VALUES</span>
@@ -814,7 +852,7 @@
         </div>
         <div class="switching-container">
             <!-- Each value container -->
-            <div class="hover-content value-container active" id="content6">
+            <div class="hover-content value-container active" id="content9">
                 <h2 class="valuename">Collaboration</h2>
                 <div class="valueimg">
                     <img src="collaboration.png" alt="Collaboration Image">
