--- a/index.html
+++ b/index.html
@@ -845,6 +845,7 @@
         <div class="image-content">
             <a href="projects.html"><img src="bg6.png" alt="Summit TECS Engineering Image"  style="height: 380px; width: 755px;"></a>
         </div>
+        <a href="projects.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
 
     <section class="hover-content" id="content6">
@@ -856,6 +857,7 @@
         <div class="image-content">
             <a href="partners.html"><img src="partners.png" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
         </div>
+        <a href="partners.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
 
     <section class="hover-content" id="content7">
@@ -867,6 +869,7 @@
         <div class="image-content">
             <a href="servises.html"><img src="images/compressed-air.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
         </div>
+        <a href="servises.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
 
       <!-- Section 4 -->
@@ -930,7 +933,7 @@
 
               <div class="contact-info">
                   <h2>Our Address</h2>
-                  <a href="https://maps.app.goo.gl/yET9U19aXqi8xQAh9">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
+                  <a href="https://maps.app.goo.gl/vkZzDTWbznwzx9mo9">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
 
                   <h2>Phone</h2>
                   <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201064649914">+201064649914</a></p>
