--- a/servises.html
+++ b/servises.html
@@ -314,15 +314,14 @@
         <div class="title">Central Air Conditioning</div>
         <img src="images/air-conditioning.jpg" alt="Air Conditioning">
         <div class="content">
-          <span>(Chilled water, VRF, and DX)</span>
-          <p class="description">Advanced Air Conditioning solutions for residential and commercial spaces.</p>
+          <p class="description">Advanced Air Conditioning solutions for commercial,industrials, administrative and residential application. Using chilled water systems, VRV systems, DX package units and slit units</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
         <img src="images/plumbing.jpg" alt="Plumbing">
         <div class="content">
-          <p class="description">Efficient and modern plumbing systems for all structures.</p>
+          <p class="description">Efficient and modern plumbing systems for all applications.</p>
         </div>
       </div>
       <div class="service-item">
