--- a/servises.html
+++ b/servises.html
@@ -20,8 +20,30 @@
       cursor: url(cursor.png), auto;
     }
 
-    /* Header Section */
+    /* Header Styling */
     header {
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.341);
+      backdrop-filter: blur(10px);
+      color: #333;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 60px;
+      z-index: 500;
+    }
+
+    header img {
+      height: 40px;
+    }
+
+    /* Header Section */
+    .header {
       background: linear-gradient(to right, #00498F, #FF6D1A);
       padding: 60px 20px;
       color: white;
@@ -76,13 +98,13 @@
       margin: 0 auto 20px;
     }
 
-    header h1 {
+    .header h1 {
       font-size: 3rem;
       font-weight: bold;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
     }
 
-    header p {
+    .header p {
       font-size: 1.2rem;
       line-height: 1.8;
       margin-top: 15px;
@@ -184,92 +206,111 @@
     .service-item.expanded .description {
       display: block;
     }
-    /* Navigation Menu Styling */
+    /* Hamburger Menu */
     .nav-menu {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(255, 255, 255, 0.1);
-      z-index: 1000;
-      cursor: url(pointer.png), auto;
-    }
+            position: fixed;
+            top: 6px;
+            right: 6px;
+            height: 50px;
+            width: 50px;
+            border-radius: 10px;
+            z-index: 900;
+            cursor: url("pointer.png"), auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .openmenu {
+          z-index: 900;
+        }
 
-    .nav-menu span {
-      display: block;
-      background: #fff;
-      width: 30px;
-      height: 4px;
-      margin: 6px 0;
-      transition: all 0.5s;
-    }
-    .openmenu {
-      cursor: url(pointer.png), auto;
-    }
+        .nav-menu div {
+            width: 40px;
+            height: 40px;
+            margin: 2px;
+            position: fixed;
+            z-index: 900;
+        }
+        .nav-menu span {
+            background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
+            width: 80%;
+            height: 4px;
+            border-radius: 5px;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: transform 0.5s, width 0.5s;
+        }
 
-    .openmenu span:nth-child(1) {
-      transform: rotate(45deg) translate(6px, 6px);
-    }
+        .openmenu {
+          z-index: 900;
+        }
+        .nav-menu .line1 {
+            transform: translate(-50%, -12px);
+            z-index: 900;
+        }
+        .nav-menu .line3 {
+            transform: translate(-50%, 8px);
+            z-index: 900;
+        }
+        .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+        }
+        .openmenu .line3 {
+            transform: translate(-50%, -50%) rotate(45deg);
+            z-index: 900;
+        }
+        .openmenu .line2 {
+            width: 0;
+            z-index: 900;
+        }
 
-    .openmenu span:nth-child(2) {
-      opacity: 0;
-    }
+        /* Menu Styling */
+        .nav-btn-menu {
+            background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent */
+            width: 40%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            justify-content: center;
+            position: fixed;
+            z-index: 800;
+            top: 0;
+            left: 100%;
+            transition: left 0.5s ease;
+            box-shadow: -4px 0 15px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+        }
 
-    .openmenu span:nth-child(3) {
-      transform: rotate(-45deg) translate(6px, -6px);
-    }
+        .nav-btn-menu button {
+            padding: 10px 20px;
+            border: none;
+            background: none;
+            color: #333;
+            font-size: 40px;
+            font-weight: 700;
+            font-family: "Roboto", sans-serif;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            transition: color 0.3s, transform 0.3s;
+            cursor: url('pointer.png'), auto;
+        }
 
-    .nav-btn-menu {
-      position: fixed;
-      top: 0;
-      left: 100%;
-      width: 40%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      transition: left 0.5s ease;
-      z-index: 900;
-    }
+        .nav-btn-menu button:hover {
+            color: #FF8C00;
+            transform: scale(1.1); /* Scale on hover */
+        }
 
-    .trans-nav-btn-menu {
-      left: 60%;
-      z-index: 999;
-    }
-
-    .nav-btn-menu button {
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 40px;
-      font-weight: bold;
-      margin: 15px 0;
-      padding: 10px 20px;
-      cursor: pointer;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-      transition: transform 0.3s, color 0.3s;
-      cursor: url(pointer.png), auto;
-    }
-
-    .nav-btn-menu button:hover {
-      transform: scale(1.1);
-      color: #ffa500;
-    }
-    @media (max-width: 1000px) {
-      .nav-btn-menu {
-        width: 60%;
-      }
-      .trans-nav-btn-menu {
-        left: 40%;
-      }
-    }
+        .trans-nav-btn-menu {
+            left: 60%;
+        }
+        @media (max-width: 1000px) {
+          .description {
+            font-size: 15px;
+          }
+        }
   </style>
 </head>
 <body>
@@ -297,14 +338,17 @@
     <button id="buttonii">•About-us</button>
     <button id="buttoniiiiii">•Contact-us</button>
   </div>
-  <!-- Header Section -->
   <header>
+    <img src="logoname.png" alt="Logo">
+  </header>
+  <!-- Header Section -->
+  <div class="header">
     <img src="logo.png" alt="Logo" class="logo">
     <h1>OUR SERVICES</h1>
     <p>
       We offer comprehensive engineering and construction solutions for electromechanical works across various sectors, including commercial, administrative, residential, and presidential buildings, restaurants, factories (with a focus on pharmaceutical plants), hospitals, airports, and farms.
     </p>
-  </header>
+  </div>
 
   <!-- Services Section -->
   <section class="services">
@@ -314,21 +358,23 @@
         <div class="title">Central Air Conditioning</div>
         <img src="images/air-conditioning.jpg" alt="Air Conditioning">
         <div class="content">
-          <p class="description">Advanced Air Conditioning solutions for commercial,industrials, administrative and residential application. Using chilled water systems, VRV systems, DX package units and slit units</p>
+          <p class="description">Advanced Air Conditioning solutions for commercial,industrials, administrative and residential application. Using chilled water systems, VRV systems, DX package units and split units.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
         <img src="images/plumbing.jpg" alt="Plumbing">
         <div class="content">
-          <p class="description">Efficient and modern plumbing systems for all applications.</p>
+          <p class="description">We are specialised in providing professional solutions for water and drainage systems in residential, commercial, and industrial applications. These services ensure the efficient and safe management of water supply and waste dispos.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Firefighting</div>
         <img src="images/firefighting.jpg" alt="Firefighting">
         <div class="content">
-          <p class="description">State-of-the-art fire prevention and safety installations.</p>
+          <p class="description">With a team of experienced professionals, state-of-the-art equipment, and a commitment to safety, we provide top-tier fire protection and safety solutions for all types of buildings. 
+            Our mission is to safeguard lives and property by delivering comprehensive fire detection, suppression, and prevention services tailored to meet the unique needs of each client.
+            while ensuring full compliance with international standards and local authority requirements.</p>
         </div>
       </div>
       <div class="service-item">
