--- a/servises.html
+++ b/servises.html
@@ -20,8 +20,30 @@
       cursor: url(cursor.png), auto;
     }
 
-    /* Header Section */
+    /* Header Styling */
     header {
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.341);
+      backdrop-filter: blur(10px);
+      color: #333;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 60px;
+      z-index: 500;
+    }
+
+    header img {
+      height: 40px;
+    }
+
+    /* Header Section */
+    .header {
       background: linear-gradient(to right, #00498F, #FF6D1A);
       padding: 60px 20px;
       color: white;
@@ -76,13 +98,13 @@
       margin: 0 auto 20px;
     }
 
-    header h1 {
+    .header h1 {
       font-size: 3rem;
       font-weight: bold;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
     }
 
-    header p {
+    .header p {
       font-size: 1.2rem;
       line-height: 1.8;
       margin-top: 15px;
@@ -132,7 +154,7 @@
     }
 
     .service-item.expanded {
-      transform: scale(1.1);
+      transform: scale(1.2);
       z-index: 10;
     }
 
@@ -141,7 +163,7 @@
       height: 150px;
       object-fit: cover;
       border-radius: 10px;
-      display: none;
+      display: block;
     }
 
     .service-item.expanded img {
@@ -156,7 +178,7 @@
     }
 
     .service-item .content {
-      opacity: 0;
+      opacity: 1;
       transform: translateY(20px);
       transition: opacity 0.4s ease, transform 0.4s ease;
     }
@@ -178,98 +200,117 @@
       font-size: 1rem;
       line-height: 1.5;
       margin-top: 15px;
-      display: none;
+      display: block;
     }
 
     .service-item.expanded .description {
       display: block;
     }
-    /* Navigation Menu Styling */
+    /* Hamburger Menu */
     .nav-menu {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(255, 255, 255, 0.1);
-      z-index: 1000;
-      cursor: url(pointer.png), auto;
-    }
+            position: fixed;
+            top: 6px;
+            right: 6px;
+            height: 50px;
+            width: 50px;
+            border-radius: 10px;
+            z-index: 900;
+            cursor: url("pointer.png"), auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .openmenu {
+          z-index: 900;
+        }
 
-    .nav-menu span {
-      display: block;
-      background: #fff;
-      width: 30px;
-      height: 4px;
-      margin: 6px 0;
-      transition: all 0.5s;
-    }
-    .openmenu {
-      cursor: url(pointer.png), auto;
-    }
+        .nav-menu div {
+            width: 40px;
+            height: 40px;
+            margin: 2px;
+            position: fixed;
+            z-index: 900;
+        }
+        .nav-menu span {
+            background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
+            width: 80%;
+            height: 4px;
+            border-radius: 5px;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: transform 0.5s, width 0.5s;
+        }
 
-    .openmenu span:nth-child(1) {
-      transform: rotate(45deg) translate(6px, 6px);
-    }
+        .openmenu {
+          z-index: 900;
+        }
+        .nav-menu .line1 {
+            transform: translate(-50%, -12px);
+            z-index: 900;
+        }
+        .nav-menu .line3 {
+            transform: translate(-50%, 8px);
+            z-index: 900;
+        }
+        .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+        }
+        .openmenu .line3 {
+            transform: translate(-50%, -50%) rotate(45deg);
+            z-index: 900;
+        }
+        .openmenu .line2 {
+            width: 0;
+            z-index: 900;
+        }
 
-    .openmenu span:nth-child(2) {
-      opacity: 0;
-    }
+        /* Menu Styling */
+        .nav-btn-menu {
+            background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent */
+            width: 40%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            justify-content: center;
+            position: fixed;
+            z-index: 800;
+            top: 0;
+            left: 100%;
+            transition: left 0.5s ease;
+            box-shadow: -4px 0 15px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+        }
 
-    .openmenu span:nth-child(3) {
-      transform: rotate(-45deg) translate(6px, -6px);
-    }
+        .nav-btn-menu button {
+            padding: 10px 20px;
+            border: none;
+            background: none;
+            color: #333;
+            font-size: 40px;
+            font-weight: 700;
+            font-family: "Roboto", sans-serif;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            transition: color 0.3s, transform 0.3s;
+            cursor: url('pointer.png'), auto;
+        }
 
-    .nav-btn-menu {
-      position: fixed;
-      top: 0;
-      left: 100%;
-      width: 40%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      transition: left 0.5s ease;
-      z-index: 900;
-    }
+        .nav-btn-menu button:hover {
+            color: #FF8C00;
+            transform: scale(1.1); /* Scale on hover */
+        }
 
-    .trans-nav-btn-menu {
-      left: 60%;
-      z-index: 999;
-    }
-
-    .nav-btn-menu button {
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 40px;
-      font-weight: bold;
-      margin: 15px 0;
-      padding: 10px 20px;
-      cursor: pointer;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-      transition: transform 0.3s, color 0.3s;
-      cursor: url(pointer.png), auto;
-    }
-
-    .nav-btn-menu button:hover {
-      transform: scale(1.1);
-      color: #ffa500;
-    }
-    @media (max-width: 1000px) {
-      .nav-btn-menu {
-        width: 60%;
-      }
-      .trans-nav-btn-menu {
-        left: 40%;
-      }
-    }
+        .trans-nav-btn-menu {
+            left: 60%;
+        }
+        @media (max-width: 1000px) {
+          .description {
+            font-size: 15px;
+          }
+        }
   </style>
 </head>
 <body>
@@ -297,72 +338,88 @@
     <button id="buttonii">•About-us</button>
     <button id="buttoniiiiii">•Contact-us</button>
   </div>
-  <!-- Header Section -->
   <header>
+    <img src="logoname.png" alt="Logo">
+  </header>
+  <!-- Header Section -->
+  <div class="header">
     <img src="logo.png" alt="Logo" class="logo">
     <h1>OUR SERVICES</h1>
     <p>
       We offer comprehensive engineering and construction solutions for electromechanical works across various sectors, including commercial, administrative, residential, and presidential buildings, restaurants, factories (with a focus on pharmaceutical plants), hospitals, airports, and farms.
     </p>
-  </header>
+  </div>
 
   <!-- Services Section -->
   <section class="services">
     <h2>Explore Our Expert Services</h2>
     <div class="services-grid">
       <div class="service-item">
-        <div class="title">Central Air Conditioning Systems</div>
+        <div class="title">Central Air Conditioning</div>
         <img src="images/air-conditioning.jpg" alt="Air Conditioning">
         <div class="content">
-          <span>(Chilled water, VRF, and DX)</span>
-          <p class="description">Advanced Air Conditioning solutions for residential and commercial spaces.</p>
+          <p class="description">Advanced Air Conditioning solutions for commercial,industrials, administrative and residential application. Using chilled water systems, VRV systems, DX package units and split units.</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
         <img src="images/plumbing.jpg" alt="Plumbing">
         <div class="content">
-          <p class="description">Efficient and modern plumbing systems for all structures.</p>
+          <p class="description">We are specialised in providing professional solutions for water and drainage systems in residential, commercial, and industrial applications. These services ensure the efficient and safe management of water supply and waste dispos.</p>
         </div>
       </div>
       <div class="service-item">
-        <div class="title">Firefighting Systems</div>
+        <div class="title">Firefighting</div>
         <img src="images/firefighting.jpg" alt="Firefighting">
         <div class="content">
-          <p class="description">State-of-the-art fire prevention and safety installations.</p>
+          <p class="description">With a team of experienced professionals, state-of-the-art equipment, and a commitment to safety, we provide top-tier fire protection and safety solutions for all types of buildings. 
+            Our mission is to safeguard lives and property by delivering comprehensive fire detection, suppression, and prevention services tailored to meet the unique needs of each client.
+            while ensuring full compliance with international standards and local authority requirements.</p>
         </div>
       </div>
       <div class="service-item">
-        <div class="title">Electrical Works</div>
+        <div class="title">Electrical</div>
         <img src="images/electrical.jpg" alt="Electrical Works">
         <div class="content">
-          <span>(Power, Lighting, and Low Current)</span>
-          <p class="description">Comprehensive electrical solutions for varied needs.</p>
+          <span style="font-size: 20px;">(Power, Lighting, and Low Current)</span>
+          <p class="description">we provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability for both new and existing buildings.
+            <br><br>
+            Our Services
+            <br><br>
+            Wiring and Panel Upgrades: Expert installation and upgrades to meet modern standards.
+            <br><br>
+            Energy-Efficient Lighting Systems: Advanced solutions to reduce energy consumption and costs.
+            <br><br>
+            Backup Power Systems: Reliable installation of generators and UPS for uninterrupted power supply.
+            <br><br>
+            Custom Electrical Solutions: Specialized services for factories, warehouses, restaurants, residential properties, and offices.
+            <br><br>
+            With a focus on quality and compliance with all safety standards, we are committed to delivering exceptional results for projects of all sizes. Let us power your success!</p>
         </div>
       </div>
       <div class="service-item">
         <div class="title">Smart Home Technologies</div>
         <img src="images/smart-home.jpg" alt="Smart Home">
         <div class="content">
-          <p class="description">Integrated smart solutions for modern living.</p>
+          <p class="description">we specialize in transforming living spaces into intelligent, connected environments with cutting-edge smart home solutions. Our mission is to enhance comfort, convenience, and security by integrating advanced technology into homes, tailored to meet the unique needs of every client.</p>
         </div>
       </div>
       <div class="service-item">
-        <div class="title">Steam Systems</div>
+        <div class="title">Steam Networks</div>
         <img src="images/steam.jpg" alt="Steam Systems">
         <div class="content">
           <p class="description">Reliable steam systems for industrial and commercial use.</p>
         </div>
       </div>
       <div class="service-item">
-        <div class="title">Compressed Air Systems</div>
+        <div class="title">Compressed Air</div>
         <img src="images/compressed-air.jpg" alt="Compressed Air Systems">
         <div class="content">
           <p class="description">High-efficiency compressed air solutions for your needs.</p>
         </div>
       </div>
       <div class="service-item">
-        <div class="title">Heating Systems</div>
+        <div class="title">Heating Networks</div>
         <img src="images/heating.jpg" alt="Heating Systems">
         <div class="content">
           <p class="description">Modern and energy-efficient heating solutions.</p>
@@ -376,7 +433,7 @@
         </div>
       </div>
       <div class="service-item">
-        <div class="title">Medical Gas Systems</div>
+        <div class="title">Medical Gas</div>
         <img src="images/medical-gas.jpg" alt="Medical Gas Systems">
         <div class="content">
           <p class="description">Specialized gas systems for medical facilities.</p>
@@ -451,7 +508,7 @@ function preloadImages(callback) {
       setInterval(() => {
         expandServiceItem(serviceItems[index]);
         index = (index + 1) % serviceItems.length;
-      }, 3000); // Change every 3 seconds
+      }, 4000); // Change every 3 seconds
     }
 
     // Click to expand
